Judge/Temporary_Error/281.log
./temp/281/code.cpp:1:1: error: 'import' does not name a type
 import sys
 ^
